--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -25,7 +25,7 @@ body:
 id: what-happened
 attributes:
   label: What happened?
-  description: I ran this command and it produced this output:
+  description: I ran this command and it produced this output.
   placeholder: Tell us what you see!
   value: "A bug happened!"
 validations:
@@ -34,7 +34,7 @@ validations:
 id: what-happened
 attributes:
   label: Expected?
-  description: Certbot's behavior differed from what I expected because:
+  description: Certbot's behavior differed from what I expected because.
   placeholder: "What was expected?
   value: "A bug happened!"
 validations:
