--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -18,6 +18,8 @@ body:
         - OS:
         - Version:
         - Install Type:
+      validations:
+        required: true
     render: markdown
   - type: textarea
     id: what-happened
