--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,6 +1,7 @@
 name: Bug Report
 description: File a bug report.
 title: "[Bug]: "
+type: Bug
 body:
   - type: markdown
     attributes:
@@ -10,7 +11,7 @@ body:
     attributes:
       label: Environment
       description: |
-        examples:
+        Describe your environment. Examples:
           - **OS**: Ubuntu
           - **Version** 22.04
           - **Install Type**: (snap, OS package manager, pip, certbot-auto, etc)
@@ -18,21 +19,29 @@ body:
         - OS:
         - Version:
         - Install Type:
-      validations:
-        required: true
     render: markdown
   - type: textarea
     id: what-happened
     attributes:
       label: What happened?
-      description: I ran this command and it produced this output.
+      description: |
+        I ran this command and it produced this output. Example:
+        ```
+        $ sudo certbot certonly -d adfsfasdf.asdfasdf --staging
+        Saving debug log to /var/log/letsencrypt/letsencrypt.log
+        Plugins selected: Authenticator nginx, Installer nginx
+        Requesting a certificate for example.com
+        An unexpected error occurred:
+        Invalid identifiers requested :: Cannot issue for "adfsfasdf.asdfasdf": Domain name does not end with a valid public suffix (TLD)
+        Ask for help or search for solutions at https://community.letsencrypt.org. See the logfile /var/log/letsencrypt/letsencrypt.log or re-run Certbot with -v for more details.
+        ```
       placeholder: Tell us what you see!
     validations:
       required: true
   - type: textarea
     id: expected
     attributes:
-      label: Expected?
+      label: Expected behavior
       description: Certbot's behavior differed from what I expected because.
       placeholder: "What was expected?"
     validations:
@@ -43,3 +52,4 @@ body:
       label: Relevant log output
       description: Here is a Certbot log showing the issue (if available). Logs are stored in `/var/log/letsencrypt` by default. Feel free to redact domains, e-mail and IP addresses as you see fit.
     render: shell
+    
